2008-04-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala:

	  Fix generated C code when passing structs by reference,
	  fixes bug 528414

2008-04-16  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/vala.h, vala/valablock.vala,
	  vala/valacatchclause.vala, vala/valacfgbuilder.vala,
	  vala/valaclass.vala, vala/valacodecontext.vala,
	  vala/valacodegenerator.vala, vala/valacodevisitor.vala,
	  vala/valadeclarationstatement.vala, vala/valaexpression.vala,
	  vala/valaforeachstatement.vala, vala/valainterface.vala,
	  vala/valalocalvariable.vala, vala/valamemorymanager.vala,
	  vala/valamethod.vala, vala/valanullchecker.vala,
	  vala/valaparser.vala, vala/valasemanticanalyzer.vala,
	  vala/valastruct.vala, vala/valaswitchsection.vala,
	  vala/valasymbolresolver.vala,
	  gobject/valaccodearraycreationexpressionbinding.vala,
	  gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratormemberaccess.vala:

	  Rename VariableDeclarator to LocalVariable,
	  remove LocalVariableDeclaration class

2008-04-16  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi: Make DestroyNotify delegate argument
	nullable.

2008-04-15  Jürg Billeter  <j@bitron.ch>

	* vala/valascope.vala: update for use with non-null types

2008-04-15  Jürg Billeter  <j@bitron.ch>

	* vapi/cairo.vapi: fix cairo_set_dash binding

2008-04-15  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_main_loop_new binding,
	  patch by Andrea Del Signore

2008-04-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_message_dialog_new* bindings,
	  patch by Phil Housley

	* vapi/gtk+-2.0.vapi: regenerated

2008-04-15  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala, vala/valaclasstype.vala,
	  vala/valadatatype.vala, vala/valaformalparameter.vala,